[gd_scene load_steps=4 format=3 uid="uid://7qoxqwxaounk"]

[ext_resource type="Script" path="res://Menus/won_ui.gd" id="1_5pywd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o0wib"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_luqwj"]

[node name="WonUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5pywd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 64
theme_override_styles/separator = SubResource("StyleBoxEmpty_o0wib")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 128
text = "Congratulations
you beat "
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 64
theme_override_styles/separator = SubResource("StyleBoxEmpty_o0wib")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StartButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "CONTINUE"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 64
theme_override_styles/separator = SubResource("StyleBoxEmpty_luqwj")

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "LEAVE"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_o0wib")

[node name="ConfirmContainer" type="PanelContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ConfirmContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label2" type="Label" parent="VBoxContainer/ConfirmContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Are you sure?"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ConfirmContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LeaveButton" type="Button" parent="VBoxContainer/ConfirmContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "GET ME OUT!"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/ConfirmContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64
theme_override_styles/separator = SubResource("StyleBoxEmpty_luqwj")

[node name="NeverLeaveButton" type="Button" parent="VBoxContainer/ConfirmContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "IM NEVER LEAVING"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ConfirmContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_o0wib")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
